--- a/css/jquery.terminal-src.css
+++ b/css/jquery.terminal-src.css
@@ -148,6 +148,15 @@ body.full-screen-terminal .terminal {
     color: inherit;
     bottom: 0;
 }
+.cmd .cursor-line > span:empty {
+    display: none;
+}
+.cmd .cursor-line > span:empty + .cursor + span {
+    margin-left: -1px;
+}
+.cmd .cursor-line > span:not(.cursor):not(:empty) {
+    /* margin-left: -1px; */
+}
 .cmd .cursor-line > span {
     display: inline-block;
     float: left;
